# Real-Time-Action-Recognition

./: .gitignore  README.md  pyproject.toml
notebooks/: 1.0-dataset_analysis_UCF101.ipynb  1.1-dataset_class.ipynb  2.0-prepare_lighting.ipynb  3.1-slowfast_network.ipynb  3.2-slowfast_network_self_impl.ipynb  4.1-tdn_network.ipynb  5.1-d3d_network.ipynb  6.1-timesformer_pretrained.ipynb  6.2-timesformer_self_impl.ipynb  slowfast.py  test.py
notebooks/lib/: trainer.py  utils.py
notebooks/lightning_logs/version_0/: events.out.tfevents.1746878034.slava-z790udax.5058.1
notebooks/lightning_logs/version_1/: events.out.tfevents.1746878130.slava-z790udax.5058.2
notebooks/lightning_logs/version_2/: events.out.tfevents.1746878211.slava-z790udax.8288.0
notebooks/lightning_logs/version_3/: events.out.tfevents.1746878255.slava-z790udax.8288.1
notebooks/lightning_logs/version_4/: events.out.tfevents.1746878378.slava-z790udax.8288.2
notebooks/lightning_logs/version_5/: events.out.tfevents.1746878399.slava-z790udax.8288.3
notebooks/logs/d3d/version_0/: events.out.tfevents.1746888052.slava-z790udax.52108.0  hparams.yaml
notebooks/logs/d3d/version_1/: events.out.tfevents.1746888918.slava-z790udax.52108.1  hparams.yaml
notebooks/logs/d3d/version_2/: events.out.tfevents.1746889075.slava-z790udax.52108.2
notebooks/logs/d3d/version_3/: events.out.tfevents.1746889107.slava-z790udax.91758.0
notebooks/logs/d3d/version_4/: events.out.tfevents.1746889169.slava-z790udax.91758.1  events.out.tfevents.1746898024.slava-z790udax.91758.2  hparams.yaml
(+7 files in other folders)
