[tool.poetry]
name = "human action video recognition ucf101"
version = "0.1.0"
description = ""
authors = ["Slauva <koshman2015@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
jupyter = "^1.1.1"
torch = "^2.7.0"
torchvision = "^0.22.0"
pytorchvideo = "^0.1.5"
torchmetrics = "^1.7.1"
opencv-python = "^4.11.0.86"
torchcodec = "^0.3.0"
ffmpeg = "^1.4"
pytorch-lightning = "^2.5.1.post0"
pynvml = "^12.0.0"
tensorboard = "^2.19.0"
tensorboardx = "^2.6.2.2"
transformers = "^4.51.3"
einops = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
